force-app/main/default/objects/Email_Subscription__c/Email_Subscription__c.object-meta.xml
<CustomObject>
    <description>PGP-0005: Store Email Subscription record</description>
    <label>Email Subscription</label>
    <nameField>
        <displayFormat>ES- {YYYY}{MM}{DD}{0}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Email Subscriptions</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>