force-app/main/default/objects/Email_Subscription__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <description>PGP-0005: Add Contact lookup in Email Subscription</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Email Subscriptions</relationshipLabel>
    <relationshipName>Email_Subscriptions</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>