force-app/main/default/objects/Email_Subscription__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>PGP-0005: Create description for Email Subscription</description>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>