force-app/main/default/objects/Email_Subscription__c/fields/Email_List__c.field-meta.xml
<CustomField>
    <fullName>Email_List__c</fullName>
    <description>PGP-0005: Email List Lookup to create Email Subscription record</description>
    <label>Email List</label>
    <referenceTo>Email_List__c</referenceTo>
    <relationshipLabel>Email Subscriptions</relationshipLabel>
    <relationshipName>Email_Subscriptions</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>