force-app/main/default/objects/Email_Subscription__c/fields/Subscription__c.field-meta.xml
<CustomField>
    <fullName>Subscription__c</fullName>
    <description>PGP-0005: Add Subscription details.</description>
    <label>Subscription</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>